# demo-ingestion

./: .gitignore  .pre-commit-config.yaml  .zshrc  Dockerfile  README.md  buf.gen.yaml  buf.yaml  main.tf  pyproject.toml
.devcontainer/: devcontainer.json
.github/: buf.yml  checkov.yml
.github/workflows/: buf.yml  checkov.yml
collector/: function.go  go.mod  go.sum  main.go
collector/_go/proto/gen_bq_schema/: bq_table.pb.go
collector/cmd/: main.go
corefirestore/: function.go  go.mod  go.sum
corefirestore/_go/proto/: demo.pb.go
corefirestore/cmd/: main.go
currentflights/: README.md  function.go  go.mod  go.sum
currentflights/cmd/: main.go
demo_ingestion/v1/: demo.proto
flights/: .firebaserc  README.md  firebase.json  pubspec.yaml
flights/lib/: main.dart
flights/lib/src/: app.dart  in_air_flights.dart
flights/lib/src/localization/: app_en.arb
flights/macos/Runner/: GoogleService-Info.plist
flights/macos/Runner.xcodeproj/: project.pbxproj
flights/web/: index.html
inairflights/: function.go  go.mod  go.sum
inairflights/cmd/: main.go
proto/: demo.proto
proto/demo_ingestion/v1/: demo.proto
protos/: demo.proto
pubsub_proto_stripped/: README.md  demo.proto_4_pubsub
