[tool.ruff]
# Same as Black.
line-length = 88
target-version = "py312"


[tool.ruff.lint]

select = ["B", "D", "E", "F", "I", "W", "A", "N",  "PD", "UP", "ANN", "COM", "C90", "DTZ", "NPY", "RET", "RUF", "TID", "TRY"]
ignore = ["D212", "D203"]

fixable = ["I", "RUF100"]
unfixable = []

# Exclude a variety of commonly ignored directories.
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
]

# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.lint.mccabe]
# Unlike Flake8, default to a complexity level of 10.
max-complexity = 10


[tool.poetry]
name = "demo-ingestion"
description = "Demo Ingestion Pipeline"
readme = "README.md"
#version = "0.0.1"
authors = [
    "Bruce Arctor <iambrucearctor@gmail.com>",
]
package-mode = false


[tool.poetry.dependencies]
python = "^3.11.0"
black = "24.8.0"
ruff = "0.6.5"
checkov = "3.2.255"

[build-system]
requires = ["poetry-core>=1.6"]
build-backend = "poetry.core.masonry.api"
